MH-11822 this ensures that unexpected inputs cannot break the editor

--- a/modules/matterhorn-admin-ui-ng/src/main/webapp/styles/components/video/_video-editor.scss
+++ b/modules/matterhorn-admin-ui-ng/src/main/webapp/styles/components/video/_video-editor.scss
@@ -670,6 +670,11 @@ $segment-deleted-selected: darken($segment-deleted, 18%);
             height: auto;
             width: 90px;
             padding: 0 5px;
+
+            &:disabled {
+              color: $light-prim-color;
+              background-color: darken(#FFFFFF, 5%);
+            }
           }
       }
 
